Updated CSS for hero-card to resolve jump hover effect

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,6 +224,9 @@ p {
     border-radius: 5px;
     background-color: white;
 }
+.hero-card a {
+    width: 100%;
+}
 
 .hero-banner {
     display: flex;
